src/test/test-models/good/model/domain_fail.stan
parameters {
  real<lower=0> x;
}
model {
  target += -sqrt(-x);
}

